comment out ajax for now

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -113,10 +113,9 @@
     const saveMap = function() {
       console.log("map id", mapId);
       console.log("pins", markers);
-      $.ajax({
-        // this should send all the pin data
-        // use helper function to get pin data
-      })
+      // $.ajax({
+      //   url: ''
+      // })
     }
 
 
