Updated href for Create Mappi and Dashboard button

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,8 +2,8 @@
   <nav class="navbar">
     <a href="/" class="navbar-logo">Mappi</i></a>
     <div class="navbar-menu">
-      <a href="#" class="navbar-options">Create a Map</a>
-      <a href="#" class="navbar-options">Logout</a>
+      <a href="/" class="navbar-options">Create Mappi</a>
+      <a href="/users/1" class="navbar-options">Dashboard</a>
     </div>
   </nav>
 </header>
