--- a/views/users.ejs
+++ b/views/users.ejs
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <%- include('partials/_header') %>
+    <%- include('partials/_header', {user: user}); %>
     <div class="profile">
       <div class="user-profile-box">
         <img
