--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <%- include('partials/_header') %>
+  <%- include('partials/_header', {user: user}); %>
   <div class="create-map-container">
     <form action="/maps/create" method="POST" class="create-new-map">
       <h2>Create Mappi</h2>
