--- a/views/map_view.ejs
+++ b/views/map_view.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <%- include('partials/_header') %>
+  <%- include('partials/_header', {user: user}); %>
   <div class="map-container">
     <div id="map"></div>
 
