--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -3,7 +3,7 @@
     <a href="/" class="navbar-logo">Mappi</i></a>
     <div class="navbar-menu">
       <a href="/" class="navbar-options">Create Mappi</a>
-      <a href="/users/1" class="navbar-options">Dashboard</a>
+      <a href="/users/<%= user.id %>" class="navbar-options">Dashboard</a>
     </div>
   </nav>
 </header>
