Make a nicer prompt :)

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -163,9 +163,9 @@
           map_id: mapId,
           infoWindowContent:`
             <div class="infowindow" id="infowindow">
-              <h1>My id is ${id}</h1>
+              <h1>Make a title :)</h1>
               <img src="https://i.imgur.com/uVU4ffo.jpg">
-              <p>This is my long long long very very very very long description</p>
+              <p>add a short description please!</p>
               <button onclick="deleteMarker(${id})" id="deletebtn${id}">Delete</button>
             </div>`
       });
