--- a/views/map.ejs
+++ b/views/map.ejs
@@ -59,15 +59,12 @@
     let markerId = 0;
     let selectedMarkerId = 0;
     const mapId = <%= mapData.id %>;
+    const currentUser = {id: <%= user.id %>};
     const uniqueId = function() {
         return ++markerId;
     }
-    // The markers object is exposed to the console
-    // In the browser type "markers" and hit enter to see all the markers
-    // To get a position of a single marker (ex. id=1) type the following
-    // markers[1].position.lat()
-    // or
-    // markers[1].position.lng()
+
+
     let markers = {};
     function imageExists(url, callback) {
       if(url.match(/^http:\/\/.*/) || url.match(/^https:\/\/.*/)){
@@ -96,7 +93,6 @@
             <button onclick="deleteMarker(${id})" id="deletebtn${id}">Delete</button>
         </div>
         `;
-        console.log(markers[id]);
         markers[id].infoWindowContent = contentString;
         infowindow.setContent(contentString)
       })
@@ -120,7 +116,8 @@
           image_url: pins[pin].image_url,
           lat: pins[pin].position.lat(),
           lng: pins[pin].position.lng(),
-          address: pins[pin].address
+          address: pins[pin].address,
+          user_id: currentUser.id,
         }
       }
       return newObj;
@@ -155,6 +152,7 @@
           title:'',
           description:'',
           image_url:'',
+          user_id: currentUser.id,
           position: position,
           map: map,
           draggable: true,
@@ -192,16 +190,7 @@
         marker.setMap(null);
         delete markers[id];
     }
-    // ############################ this data will be filled out by ejs ###############################
-    // const mapData = {
-    //   id: //generate
-    //   title: //from form
-    //   category:
-    //   lat:,
-    //   lng:
-    //   zoom:
-    //   description:
-    // }
+
     function initMap() {
       // The location of Uluru
       const myLatlng = { lat: -25.363, lng: 131.044 };
