Added favourite button and updated id for contributed and favourited maps

--- a/views/map_view.ejs
+++ b/views/map_view.ejs
@@ -26,6 +26,7 @@
       <form action="/maps/save" type="POST" class="map-info">
         <h2>Title: <%= mapData.title %></h2>
         <h3>Description: <%= mapData.description %></h3>
+        <input class="fav-map" id="fav-map" type="submit" value="Favourite">
         <input class="save-map" id="save-map" type="submit" value="Save Mappi">
       </form>
 
