--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -159,7 +159,7 @@ div#map {
   }
 }
 
-// Map info and option to edit mappi
+// Create mappi page
 .map-info-side {
   height: 70vh;
   width: 30%;
@@ -187,8 +187,6 @@ div.map-info {
   }
 }
 
-
-
 // Displays edit mappi form
 div.update-pin {
   height: 375px;
@@ -212,8 +210,6 @@ div.update-pin {
   }
 }
 
-
-
 %update-buttons {
   height: 35px;
   width: 120px;
@@ -224,6 +220,8 @@ div.update-pin {
   font-family: Varela Round, sans-serif;
   font-size: 1rem;
   color: $grey;
+  justify-content: center;
+  align-items: center;
   align-self: flex-end;
 }
 
@@ -242,6 +240,68 @@ button#save-pin-local {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+// View mappi page
+
+form.map-info {
+  height: 200px;
+  background-color: $formblue;
+  color: $grey;
+  font-family: Varela Round, sans-serif;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10px;
+  margin-bottom: 30px;
+
+  h4 {
+    font-size: 0.9rem;
+  }
+
+  div.fav-save-buttons {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  input.fav-map {
+    @extend %update-buttons;
+    margin-right: 10px;
+  }
+
+  input.save-map {
+    @extend %update-buttons;
+  }
+}
+
+// Displays edit mappi form
+form.update-pin {
+  height: 375px;
+  background-color: $formblue;
+  color: $grey;
+  font-family: Varela Round, sans-serif;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10px;
+  display: none;
+
+  label {
+    font-family: Varela Round, sans-serif;
+    font-size: 0.9rem;
+  }
+
+  h2 {
+    margin-bottom: 5px;
+  }
+
+  button.update-pin-submit {
+    @extend %update-buttons;
+
+  }
+
 }
 
 // User profile box
